スマホnavmenu. margin→padding変更

--- a/css/style.css
+++ b/css/style.css
@@ -394,7 +394,7 @@ width: 100%;
   background-color: rgba(255, 255, 255, 0.9);
   width: 0;
   z-index: 3;
-  margin-top: 50px;
+  padding-top: 50px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-transition: all 600ms ease-out;
@@ -406,7 +406,7 @@ width: 100%;
     @media screen and (max-width: 840px) {
       .js_humburgerOpen .navi {
         width: 100%;
-        margin-top: 50px 5% 0; } }
+        padding-top: 50px 5% 0; } }
 
 .navi_item {
   margin-bottom: 28px;
